who.css: fixed buttons not centered in firefox

--- a/homepage/src/app/who/who.css
+++ b/homepage/src/app/who/who.css
@@ -54,7 +54,8 @@ canvas.accepting-clicks{
  object-fit: cover;
 width: 100%;
 height: 480px;
-transition: background-image 0.1s ease-in-out;
+transition: background-image 0.1s ease-in-out; /* on firefox doesnt work*/
+display: grid;
 }
 
 .background-image-me{
@@ -117,14 +118,13 @@ transition: background-image 0.1s ease-in-out;
 .button-container {
   position: absolute;
   bottom: 1.5em;
-
   display: flex;
   flex-wrap: wrap;
   gap: 1em;
   justify-content: center;
   align-items: flex-start;
-  max-width: 100%;
-
+  max-width: 97%;
+  
 
   
 }
